tests/errors/generic_union_member_wrong_arity.dang
# Generic union member with wrong arity.

type Lft[a] {
  pub value: a
}

union Bad[a] = Lft[a, b]
